[package]
name = "vnodes"
version = "0.0.0"
authors = ["torkleyy <torkleyy@gmail.com>"]
description = """
Dispatches systems in parallel which need read access to some resources,
and write access to others.
"""
readme = "README.md"
documentation = "https://docs.rs/vnodes"
repository = "https://github.com/rustgd/vnodes"
keywords = ["parallel", "systems", "resources", "ecs"]
categories = ["concurrency"]
license = "MIT/Apache-2.0"
exclude = ["bors.toml", ".travis.yml"]

[badges]
travis-ci = { repository = "torkleyy/shred" }

[dependencies]
bitflags = "1"
fxhash = "0.2.1"
log = "0.4.1"
parking_lot = "0.5.4"

[dev-dependencies]
fern = "0.5.5"
